--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=334
+dock_hsplit_2=294
 dock_hsplit_3=-335
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -20,7 +20,17 @@ open_scenes=["res://Player/Player.tscn", "res://Levels/TestLevel.tscn", "res://P
 
 [ScriptEditor]
 
-open_scripts=["res://Mobs/Frog.gd", "res://Main.gd", "res://Design/MyHitBox.gd", "res://Design/MyHurtBox.gd", "res://Player/Player.gd", "res://Menus/Settings.gd", "res://Levels/TestLevel.gd"]
-open_help=["CanvasItem"]
+open_scripts=["res://Mobs/Frog.gd", "res://Main.gd", "res://Design/MyHitBox.gd", "res://Design/MyHurtBox.gd", "res://Player/Player.gd", "res://Menus/Settings.gd", "res://Weapons/SlashAttack.gd", "res://Levels/TestLevel.gd"]
+open_help=["AnimationPlayer", "AnimationTree"]
 script_split_offset=167
-list_split_offset=0
+list_split_offset=65
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
