--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# Normalize EOL for all files that Git considers text files.
-* text=auto eol=lf
-*.kra filter=lfs diff=lfs merge=lfs -text
-*.blend filter=lfs diff=lfs merge=lfs -text
+# # Normalize EOL for all files that Git considers text files.
+# * text=auto eol=lf
+# *.kra filter=lfs diff=lfs merge=lfs -text
+# *.blend filter=lfs diff=lfs merge=lfs -text
